apps/base/servarr/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: torrent-tcp
      protocol: TCP
      port: 6881
      targetPort: torrent-tcp
    - name: torrent-udp
      protocol: UDP
      port: 6881
      targetPort: torrent-udp
